--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,49 @@ html, body {
     margin: 0;
     padding: 0;
 }
+.red-square {
+    width: 80px;
+    height: 80px;
+    color: #FFF;
+    padding: 20px;
+    margin: 10px;
+    font-size: 14px;
+    background-color: rgba(255,0,0,0.4);
+    display: inline-block;
+}
+
+/* CSS - Exercise 05 - Inheritance */
+.cascading-parent {
+    font-weight: bold;
+    color: #FFF;
+    background-color: white;
+}
+
+.cascading-child {
+    background-color: #000;
+    width: 200px;
+    height: 200px;
+    color: red !important;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid !important;
+}
+
+.cascading-second-child {
+    background-color: white;
+    color: green;
+    width: inherit;
+    height: inherit;
+    padding: 5px;
+    border: 1px solid blue;
+}
+
+.cascading-third-child {
+    background-color: inherit;
+    /* color: inherit; */
+    width: inherit;
+    height: inherit;
+    padding: 5px;
+    border: inherit;
+}
